@@ -15,6 +15,8 @@
    - Fixed running pipe and updated tests with mockserver (margaretha)
 01/02/2021
    - Updated methods dependent to Antrl4-maven-plugin libraries (margaretha)   
+04/02/2021
+   - Fixed problem with multiple desktop apps (diewald, margaretha)
 
 # version 0.62.4
 24/01/2020
